--- a/main.css
+++ b/main.css
@@ -1,14 +1,27 @@
-header {
-    border: 15px blue
+html {
+    font-size: 16px;
+    font-family: "Arial";
 }
 
 h1 {
-    border: 10px sienna;
-    color: lightblue
+    border: 4px solid darkslategray;
+    color: orangered;
+    background: lightgray;
+    width: 400px;
+    text-align: center;
 }
 
-background {
-    color: purple
+h3 {
+    color: orangered;
+    border: 2px solid darkslategray;
+    width: 500px;
+    font-size: 20px;
+    background: lightgray;
 }
+
+body {
+    background-color: lightgoldenrodyellow;
+}
+
 
 
